<?xml version="1.0"?>
<package format="2">
  <name>carla_bridge</name>
  <version>0.0.0</version>
  <description>The carla_bridge package</description>

  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>carla_autoware_bridge</exec_depend>
  <exec_depend>carla_points_map_loader</exec_depend>
  <exec_depend>carla_ackermann_control</exec_depend>
  <exec_depend>carla_ego_vehicle</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>carla_waypoint_publisher</exec_depend>
  <exec_depend>pcl_recorder</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>